# runnr

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.txt  br.ps1  config.runnr  install.sh  nanut.py  prac.cpp  prac.py  py.cpp  pyproject.toml  runnr.conf  setup.cfg  setup.py
runnr/: main.py  runnr_flags.py  runnr_parser.py  runnr_ver.py
runnr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
