[metadata]
name = runnr
version = 0.3.0b1
author = Aniket Biswas
author_email = contact.aniket.biswas@gmail.com
long_description = runnr is an open-source command line interface tool for building, compiling & executing different programs & files.\
            A single powerfull tool for developers to compile, open, build & interpret different programs.

[options]
zip_safe = False
include_package_data = True
packages = runnr
python_requires = >=3.10

[options.package_data]
* = runnr.conf

[options.entry_points]
console_scripts= 
    runnr = runnr.main:runnr